--- a/basic.html
+++ b/basic.html
@@ -3,7 +3,8 @@
     <title>html page</title>
   </head>
   <body>
-    <h1>Hello World</h1>
-    <p>This is the paragraph</p>
+    <h1>Hello World</h1> 
+    <p>This is the paragraph 1</p>
+    <p>This is the paragraph 2</p>
   </body>
 </html>
